<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.ForgetEmailActivity">

    <LinearLayout
        android:id="@+id/buttonLanguage"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@id/lineKanan"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/border_langblack"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iconLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_translatebl"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/textLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black2"
            android:text="@string/language"
            android:textSize="16sp"
            android:fontFamily="@font/plus_jakarta_sans_medium"
            android:layout_marginStart="7dp"/>

        <ImageView
            android:id="@+id/iconDrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dropdown"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textForgetEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newForgetEmail"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@id/lineKiri"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:textColor="@color/bluedark"/>

    <TextView
        android:id="@+id/textDeskEmail"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/deskEmail"
        android:textColor="@color/softgrey"
        android:textSize="16sp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        app:layout_constraintTop_toBottomOf="@id/textForgetEmail"
        app:layout_constraintStart_toEndOf="@id/lineKiri"
        android:layout_marginTop="7dp"/>

    <TextView
        android:id="@+id/textEmailLupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="@color/bluedark"
        android:textSize="16sp"
        android:fontFamily="@font/plus_jakarta_sans_semibold"
        app:layout_constraintTop_toBottomOf="@id/textDeskEmail"
        app:layout_constraintStart_toEndOf="@id/lineKiri"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLupaTextLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="@id/lineKanan"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textEmailLupa"
        app:layout_constraintTop_toBottomOf="@+id/textEmailLupa"
        tools:alpha="1"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailLupaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input"
            android:textColor="@color/bluedark"
            android:textSize="16sp"
            android:fontFamily="@font/plus_jakarta_sans_medium"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/send"
        android:textSize="16sp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        app:layout_constraintEnd_toStartOf="@id/lineKanan"
        app:layout_constraintStart_toEndOf="@id/lineKiri"
        app:layout_constraintTop_toBottomOf="@id/lineTengahHor"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/primary"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineTengahHor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.500684" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineKiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="404dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineKanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>