<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.VerificationActivity"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageWait"
        android:layout_width="245dp"
        android:layout_height="223dp"
        android:src="@drawable/wait"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/textVerif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verif"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/imageWait"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/bluedark"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textDeskVerif"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/deskVerif"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textVerif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textColor="@color/softgrey"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="2dp"/>

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:59"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/bluedark"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/textDeskVerif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/buttonKirimUlang"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        android:background="@drawable/border_blue">

        <TextView
            android:id="@+id/textSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:text="@string/kirim"
            android:textSize="16sp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:layout_marginStart="7dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>